Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5735

The Selector property amqp.redelivered is not computed correctly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.22
    • 0.29
    • None
    • None

    Description

      Due to the fix for QPID-4668. The delivery-count held by a queued message is now off by 1 such that redelivered should actually be delivery-count>=0. This is because the count will be adjusted after the selector runs but before any actual delivery.

      You can replicate this with qpid-send/qpid-receive:

      qpid-send -a "q; {create:always}" 
      

      Then get message without acknowledging:

      qpid-receive -a q --print-headers yes --ack 0
      

      [One message is received with no Redelivered header]

      now get message with selector

      qpid-receive -a "q; {link:{selector:amqp.redelivered=true}" --print-headers yes --ack 0
      

      [No messages are received even though there is a redelivered message]

      Attachments

        Issue Links

          Activity

            People

              astitcher Andrew Stitcher
              astitcher Andrew Stitcher
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: